# volpe-integration

./: .dockerignore  .gitignore  Dockerfile  README.md  data.csv  docker-compose.yml  pyproject.toml  requirements.txt  tsp1000_run_results.py
app/: main.py
app/models/: schemas.py
app/resources/: Dockerfile.template  wrapper_main.py  wrapper_template.py
app/services/: builder.py  docker_client.py  framework_client.py
debug_artifacts/: tsp_data_02_main.py  tsp_ea_b000_main.py  tsp_ea_b001_main.py  tsp_ea_x002_main.py  tspdata03_main.py
