[project]
name = "volpe-integration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deap>=1.4.3",
    "docker>=7.1.0",
    "fastapi[standard]>=0.128.0",
    "httpx>=0.28.1",
    "opfunu>=1.0.4",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "setuptools>=80.10.2",
]
